--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,14 @@
 @import "tailwindcss";
+.loader {
+  border-top-color: #3498db; /* couleur du spinner */
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
